--- a/docker-build/action.yml
+++ b/docker-build/action.yml
@@ -29,6 +29,11 @@ inputs:
     description: "Password used to login to the registry"
     required: true
 
+  dockerfile:
+    description: "Path to the dockerfile to be built"
+    required: true
+    default: ./docker/Dockerfile
+
 runs:
   using: "docker"
   image: "Dockerfile"
