--- a/docker-build/action.yml
+++ b/docker-build/action.yml
@@ -34,6 +34,11 @@ inputs:
     required: true
     default: ./docker/Dockerfile
 
+  dockerfile_target:
+    description: "The dockerfile target build stage to build"
+    required: false
+    default: ""
+
 runs:
   using: "docker"
   image: "Dockerfile"
